--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hire James Corey</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>James Corey — Software Engineer Portfolio</title>
+		<meta
+			name="description"
+			content="James Corey is a full‑stack software engineer building fast, secure, and delightful web apps with React, TypeScript, and Node.js."
+		/>
+		<meta name="theme-color" content="#172e64" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap"
+			rel="stylesheet"
+		/>
+		<meta
+			property="og:title"
+			content="James Corey — Software Engineer Portfolio"
+		/>
+		<meta
+			property="og:description"
+			content="Full‑stack engineer specializing in React, TypeScript, Node.js. Explore projects, experience, and contact info."
+		/>
+		<meta property="og:type" content="website" />
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "Person",
+				"name": "James Corey",
+				"jobTitle": "Software Engineer",
+				"url": "https://www.hirejamescorey.com/",
+				"sameAs": [
+					"https://www.linkedin.com/in/james-corey",
+					"https://github.com/jcwoodworker"
+				]
+			}
+		</script>
+	</body>
 </html>
